updated the API code
